# tanzen

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
.github/workflows/: docs.yaml  infra-smoke.yaml
app/: index.html  package-lock.json  package.json  tsconfig.dts.json  vite.config.ts  vite.lib.config.ts
app/src/: App.tsx  index.css  index.ts  main.tsx  test-utils.tsx
cli/: Makefile
cli/admin/: go.mod  main.go
cli/client/: go.mod  go.sum  main.go
docs/: api-reference.yaml  assorted-fixes.md  clusters.md  code-execution.md  deployment-guide.md  dsl-reference.md  example-workflows.md  helm-values.md  load-test-plan.md  operations.md  security.md  talos-one.md
docs/design/: open-core-architecture.md  system-design.md  wireframe.html
docs/findings/: dev-environment.md  project-status.md
docs/plans/: milestone-1-infra.md  scripts-feature.md
examples/: load.sh
examples/agents/: clause-extractor.json  echo-agent.json  literature-extractor.json  protocol-writer.json  redline-drafter.json  (+4 more)
infra/: kftray.json
mcp/: test_agent_mcp.py
server/: package.json  tsconfig.build.json  tsconfig.json
website/: .gitignore  docusaurus.config.ts  package.json  sidebars.ts
worker/: Dockerfile  pyproject.toml
worker/src/tanzen_worker/: __init__.py  activities.py  agent_config.py  builtin_tasks.py  checkpoints.py  code_tools.py  events.py  otel.py  script_runner.py  state.py  worker.py  workflow.py
worker/tests/: conftest.py  test_agent_activity.py  test_builtin_tasks.py  test_extensions.py  test_integration.py  test_mcp_e2e.py  test_script_activity.py
(+152 files in other folders)
